--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "NODE_ENV=development mocha --compilers js:babel-core/register --require src/test/helpers.js --require src/test/dom.js --require ignore-styles src/test/**/*.spec.js",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "ignore-styles": "^5.0.1",
+    "mocha": "^3.5.3",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2"
   }
 }
